--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,12 @@ a {
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     overflow: hidden;
-    border-radius: 100px;
+    border-radius: 150px;
+    text-align: center;
+    margin-bottom: 200px;
 }
 
 h2 {
@@ -59,12 +61,13 @@ h2 {
 }      
 
 .slide {
-    margin: 150px;
+    margin: 100px;
     width: 150px;
     height: 100px;
     object-fit: cover;
     border-radius: 90%;
-    padding: 0s;
+    padding-bottom: 300px;
+    text-align: center;
     
 }
 
@@ -72,6 +75,7 @@ h2 {
     display: flex;
     gap: 50px;
     width: 500px;
+    float: left;
 }
 
 .list li {
@@ -109,7 +113,7 @@ h2 {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 2.0;
-    float: left;
+    float: right;
 }
 .copyright {
     padding: 50px 0 50px 0;
